[project]
name = "expyourlog"
version = "0.1.0"
description = "Desktop log exploration software"
authors = [
    {name = "Mickaël Descamps",email = "mickael.descamps@mineyou.fr"}
]
license = {text = "GNU GPL V3"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "expyourlog", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
